# elastic_lens

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml
adapters/offical_es7/src/: lib.rs
adapters/offical_es8/: Cargo.toml
adapters/offical_es8/src/: lib.rs
adapters/official_es7/: Cargo.toml
adapters/official_es7/src/: lib.rs
adapters/official_es8/src/: lib.rs
examples/: collapse_by.rs  fetch_a_document.rs  filter_aggs.rs  inventory_item.rs  multi_search.rs  nested_filter.rs  sample_code.rs  script_score.rs  script_sort.rs  scroll_search.rs  simple_aggs.rs  simple_search.rs  simple_sort.rs
src/: client.rs  errors.rs  lib.rs  request.rs  response.rs
src/client/: adapter.rs  builder.rs  offical_adapter.rs  offical_client_adapter.rs  official_adapter.rs  settings.rs
src/client/offical_adapter/: util.rs
src/request/: multi_search.rs  scroll_search.rs  search.rs
src/request/search/: aggregation.rs  body.rs  collapsing.rs  condition.rs  criterion.rs  field.rs  geo_values.rs  numeric_value.rs  scalar_value.rs  search_trait.rs  sort_directive.rs  target.rs
src/request/search/aggregation/: builder_trait.rs  collection.rs  filter_aggregation.rs  name.rs  stats_aggregation.rs  terms_aggregation.rs
src/request/search/aggregation/builder_trait/: filter_agg_builder.rs  stats_builder.rs  sub_agg_builder_trait.rs  terms_builder.rs
src/request/search/condition/: field.rs
src/request/search/criterion/: all_match.rs  any_match.rs  builder_trait.rs  exists_filter.rs  geo_filter.rs  nested.rs  not_all.rs  range_filter.rs  term_filter.rs
src/request/search/criterion/builder_trait/: buckets.rs  field_criteria_builder.rs  geo_distance_builder.rs
src/request/search/sort_directive/: builder_trait.rs  direction.rs  field_params.rs  geo_params.rs  missing_value.rs  script_score.rs  script_sort.rs
src/request/search/sort_directive/builder_trait/: field_sort_builder.rs  field_sort_builder_options.rs  geo_distance_sort_builder.rs  script_sort_builder.rs
src/request/search/sort_directive/script_score/: params.rs
src/response/: multi_results.rs  search_results.rs  single_document.rs
src/response/search_results/: agg_result.rs
src/response/search_results/agg_result/: collection.rs  filter_result.rs  stats_result.rs  terms_result.rs
tests/: geo_distance_filter_tests.rs  script_score_params_test.rs  search_tests.rs  sort_directive_field_params_test.rs  sort_directive_geo_distance_test.rs
